--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </section>
 
     <section class="main-content">
-      <p><a href="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter"><img src="https://travis-ci.com/SiddarthaPolisetty/SPTestRailReporter.svg?token=gvbx8gBcsPpfM9guFszy&amp;branch=master" alt="Build Status"></a>
-<a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/v/SPTestRailReporter.svg?style=flat" alt="Version"></a> 
-<a href="http://cocoapods.org/pods/SPTestRailReporter"><img src="http://img.shields.io/cocoapods/p/SPTestRailReporter.svg?style=flat" alt="Platform"></a>
+      <p><a href="https://travis-ci.org/SiddarthaPolisetty/SPTestRailReporter"><img src="https://travis-ci.org/SiddarthaPolisetty/SPTestRailReporter.svg?branch=master" alt="Build Status"></a>
+<a href="https://cocoapods.org/?q=SPTestRail"><img src="http://img.shields.io/cocoapods/v/SPTestRailReporter.svg?style=flat" alt="Version"></a> 
+<a href="https://cocoapods.org/?q=SPTestRail"><img src="http://img.shields.io/cocoapods/p/SPTestRailReporter.svg?style=flat" alt="Platform"></a>
 <a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter/blob/master/LICENSE"><img src="http://img.shields.io/cocoapods/l/SPTestRailReporter.svg?style=flat" alt="License"></a></p>
 
 <h1>
