Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
 
 <p>Please Create an issue and assign it to <a href="https://github.com/SiddarthaPolisetty" class="user-mention">@SiddarthaPolisetty</a>.</p>
 
+<h2>
+<a id="shameless-plugs" class="anchor" href="#shameless-plugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Shameless Plugs</h2>
+
+<p><img src="https://s3.amazonaws.com/mentions/mentions.png" alt="Mentions"></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter">SPTestRailReporter</a> is maintained by <a href="https://github.com/SiddarthaPolisetty">SiddarthaPolisetty</a>.</span>
 
