Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
 
 <p><img src="https://s3.amazonaws.com/mentions/mentions.png" alt="Mentions"></p>
 
+<h2>
+<a id="together-we-can-fight-world-hunger-please-donate" class="anchor" href="#together-we-can-fight-world-hunger-please-donate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Together we can fight World Hunger. Please <a href="http://www.shfb.org/donate">Donate</a>
+</h2>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/SiddarthaPolisetty/SPTestRailReporter">SPTestRailReporter</a> is maintained by <a href="https://github.com/SiddarthaPolisetty">SiddarthaPolisetty</a>.</span>
 
